[package]
name = "rainbow_negotiation_agent"
version = "0.1.0"
edition = "2024"

[lib]
name = "rainbow_negotiation_agent"
path = "src/lib.rs"

[[bin]]
name = "rainbow_negotiation_agent"
path = "src/main.rs"

[dependencies]
rainbow_common = { version = "0.3.1", path = "../rainbow-common", default-features = false }
rainbow_db = { version = "0.3.1", path = "../rainbow-db", default-features = false }
rainbow_events = { version = "0.3.1", path = "../rainbow-events", default-features = false }
rainbow_dataplane = { version = "0.3.1", path = "../rainbow-dataplane", default-features = false }

serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
jsonschema = { workspace = true }
chrono = { workspace = true }
urn = { workspace = true }
log = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
mockall = { workspace = true }
url = { workspace = true }
async-trait = "0.1.89"
tokio-util = "0.7.17"
uuid = "1.18.1"
tower-http = { version = "0.6.6", features = ["trace"] }
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
prost-types = "0.14.1"
tonic-reflection = "0.14.2"
pbjson-types = {version = "0.8.0", features = []}

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"