[package]
name = "rainbow-tests"
version = "0.3.1"
edition = "2021"


[dependencies]
rainbow_transfer = { version = "0.3.1", path = "../rainbow-transfer", default-features = false }
rainbow_common = { version = "0.3.1", path = "../rainbow-common", default-features = false }
rainbow_catalog = { version = "0.3.1", path = "../rainbow-catalog", default-features = false }
rainbow_contracts = { version = "0.3.1", path = "../rainbow-contracts", default-features = false }
rainbow_db = { version = "0.3.1", path = "../rainbow-db", default-features = false }

serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
urn = { workspace = true }
tracing-test = { workspace = true }
http = "1.2.0"
